--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "db": "json-server --watch db.json",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
